2009-02-18  Andre Klapper  <a9016009@gmx.de>

	* gobject/pygobject.h:
	Change comment to avoid false positives when grep'ing for 
	deprecated gtk functions

2009-02-17  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gio/gfile.override, gio/gio.defs, gio/gio.override: Bug 556250
	again.  I screwed up and gave misinformation about how to fix it.
	It must be pyg_begin/end_allow_threads, pyg_block/unblock_threads
	is only to be used for async callbacks.

2009-02-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 556250 – non-async functions don't release python locks before
	calling blocking C functions

	* gio/gio.override:
	* gio/gfile.override:
	* gio/gio.defs: release the thread lock.

2009-02-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	* gio/gio-types.defs:
	* gio/unix.defs: Add 2.18 gio API.

2009-02-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 568427 – "gio.Error: Too many open files" without too many
	open files
	
	* gobject/pygtype.c (_wrap_g_type_wrapper__get_name):
	* gobject/gobjectmodule.c (get_type_name_for_class):
	* gobject/pygobject.c (build_parameter_list), (PyGProps_length):
	* gio/gfileinfo.override (_wrap_g_file_info_list_attributes):
	* gio/gio.override (_wrap_g_content_type_guess):
	* gio/gfile.override (_wrap__file_init), (_wrap_g_file_load_contents)
	(_wrap_g_file_load_contents_finish): Remove some memory leaks.
	
	* gio/gio.defs: add (caller-owns-return #t) all over the place to
	prevent memory leaks.
	
	patch contributed by Paul Pogonyshev, Paolo Borelli and
	Gian Mario Tagliaretti.

2009-02-06  Murray Cumming  <murrayc@murrayc.com>

	* codegen/h2def.py DefsWriter::write_enum_defs(): Prevent an exception 
	when the prefix is empty.

2009-01-29  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 569350 – Inconsistent use of tabs and spaces in pygtk.py

	* pygtk.py: Replace all tabs with spaces.

2009-01-29  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 567792 – gio.InputStream.read_async can cause memory
	corruption
